Sonarr/overlays/example/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarr
  labels:
    istio-injection: enabled
